sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:10: error: ')' expected but integer literal found.
  n-=1
     ^